[gd_scene load_steps=16 format=3 uid="uid://cj55of8eliq5p"]

[ext_resource type="Script" uid="uid://by3tb4cuganui" path="res://ui/main.gd" id="1_feavk"]
[ext_resource type="StyleBox" uid="uid://dgnfik02ofero" path="res://ui/ui组件/coreMain.tres" id="2_feavk"]
[ext_resource type="PackedScene" uid="uid://di83olcv7ys4" path="res://ui/ui组件/玩家详情ui.tscn" id="2_sng55"]
[ext_resource type="Script" uid="uid://bv66eathc7hol" path="res://ui/map_tips.gd" id="3_fkxlp"]
[ext_resource type="Script" uid="uid://eeo57ce0wjnv" path="res://ui/map_detail.gd" id="3_lefqy"]
[ext_resource type="PackedScene" uid="uid://s3xk1mi8ryxb" path="res://object/map/MapObj.tscn" id="3_tl1qf"]
[ext_resource type="Texture2D" uid="uid://b3cvnl7nlrpbj" path="res://asserts/默认图/1744283217487_768.png" id="6_ar4ev"]
[ext_resource type="Script" uid="uid://3dgsoof28foe" path="res://object/people/people_obj.gd" id="7_xcjyc"]
[ext_resource type="PackedScene" uid="uid://d0dosq6lkla6s" path="res://object/people/PeopleObj.tscn" id="8_04ebt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sng55"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tl1qf"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ar4ev"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nk2m"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4w4kc"]
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r4kgx"]
draw_center = false

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_feavk")

[node name="Window" type="Window" parent="."]
initial_position = 2
size = Vector2i(300, 200)
visible = false

[node name="地图点击ui" type="PanelContainer" parent="Window"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/地图点击ui"]
layout_mode = 2

[node name="Button" type="Button" parent="Window/地图点击ui/VBoxContainer"]
layout_mode = 2
text = "进入"

[node name="大地图" type="PanelContainer" parent="Window"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sng55")

[node name="GridContainer2" type="GridContainer" parent="Window/大地图"]
layout_mode = 2
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 5
columns = 5

[node name="Button" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="Button2" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="Button3" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="Button4" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="Button5" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="Button6" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="Button7" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="Button8" type="Button" parent="Window/大地图/GridContainer2"]
layout_mode = 2
text = "地图ui"

[node name="自定义" type="ScrollContainer" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 360.0
offset_bottom = 558.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tl1qf")

[node name="Core" type="VBoxContainer" parent="PanelContainer"]
visible = false
layout_mode = 2

[node name="tips" type="ScrollContainer" parent="PanelContainer/Core"]
custom_minimum_size = Vector2(20, 100)
layout_mode = 2

[node name="panle" type="PanelContainer" parent="PanelContainer/Core/tips"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_feavk")

[node name="Label" type="Label" parent="PanelContainer/Core/tips/panle"]
layout_mode = 2
text = "这里是动态的tips"

[node name="MapTips" type="VBoxContainer" parent="PanelContainer/Core/tips/panle"]
visible = false
layout_mode = 2
script = ExtResource("3_fkxlp")

[node name="Properties" type="GridContainer" parent="PanelContainer/Core/tips/panle/MapTips"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Core/tips/panle/MapTips/Properties"]
layout_mode = 2

[node name="ButtonGroup" type="GridContainer" parent="PanelContainer/Core/tips/panle/MapTips"]
layout_mode = 2

[node name="Enter" type="Button" parent="PanelContainer/Core/tips/panle/MapTips/ButtonGroup"]
layout_mode = 2
text = "进入"

[node name="CoreMain" type="ScrollContainer" parent="PanelContainer/Core"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="panle" type="PanelContainer" parent="PanelContainer/Core/CoreMain"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_feavk")

[node name="Map" type="GridContainer" parent="PanelContainer/Core/CoreMain/panle"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Button" type="Button" parent="PanelContainer/Core/CoreMain/panle/Map"]
visible = false
layout_mode = 2
text = "地图ui"

[node name="MapDetail" type="VBoxContainer" parent="PanelContainer/Core/CoreMain/panle"]
visible = false
layout_mode = 2
script = ExtResource("3_lefqy")

[node name="Properties" type="GridContainer" parent="PanelContainer/Core/CoreMain/panle/MapDetail"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Core/CoreMain/panle/MapDetail/Properties"]
layout_mode = 2
text = "名称：xxx"

[node name="PeopleList" type="GridContainer" parent="PanelContainer/Core/CoreMain/panle/MapDetail"]
layout_mode = 2

[node name="MasterList" type="GridContainer" parent="PanelContainer/Core/CoreMain/panle/MapDetail"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/Core/CoreMain/panle/MapDetail/MasterList"]
layout_mode = 2
text = "怪物1"

[node name="ButtonList" type="GridContainer" parent="PanelContainer/Core/CoreMain/panle/MapDetail"]
layout_mode = 2

[node name="PlayerInfo" type="ScrollContainer" parent="PanelContainer/Core"]
custom_minimum_size = Vector2(0, 220)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/Core/PlayerInfo"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="玩家详情ui" parent="PanelContainer/Core/PlayerInfo/PanelContainer" instance=ExtResource("2_sng55")]
layout_mode = 2

[node name="FightCore" type="VBoxContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(360, 540)
layout_mode = 2

[node name="FightLog" type="RichTextLabel" parent="PanelContainer/FightCore"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "战斗日志"

[node name="Enemy" type="PanelContainer" parent="PanelContainer/FightCore"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ar4ev")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/FightCore/Enemy"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/FightCore/Enemy/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7nk2m")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/FightCore/Enemy/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/FightCore/Enemy/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
texture = ExtResource("6_ar4ev")
expand_mode = 4
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/FightCore/Enemy/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/FightCore"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_4w4kc")

[node name="Player" type="PanelContainer" parent="PanelContainer/FightCore"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_r4kgx")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/FightCore/Player"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/FightCore/Player/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7nk2m")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/FightCore/Player/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/FightCore/Player/HBoxContainer/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
texture = ExtResource("6_ar4ev")
expand_mode = 4
stretch_mode = 5

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/FightCore/Player/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/FightCore"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/FightCore/GridContainer"]
layout_mode = 2
text = "按钮"

[node name="AllData" type="SubViewport" parent="."]

[node name="MapList" type="SubViewport" parent="AllData"]

[node name="新手村" parent="AllData/MapList" instance=ExtResource("3_tl1qf")]
name_str = "新手村"

[node name="青风山" parent="AllData/MapList" instance=ExtResource("3_tl1qf")]
name_str = "青风山"

[node name="PeopleList" type="SubViewport" parent="AllData"]

[node name="PeopleObj" type="Node" parent="AllData/PeopleList"]
script = ExtResource("7_xcjyc")
name_str = "人物1"
metadata/_custom_type_script = "uid://3dgsoof28foe"

[node name="PeopleObj2" type="Node" parent="AllData/PeopleList"]
script = ExtResource("7_xcjyc")
name_str = "人物2"
metadata/_custom_type_script = "uid://3dgsoof28foe"

[node name="PlayerList" type="SubViewport" parent="AllData"]

[node name="Player" parent="AllData/PlayerList" instance=ExtResource("8_04ebt")]

[connection signal="pressed" from="PanelContainer/Core/tips/panle/MapTips/ButtonGroup/Enter" to="PanelContainer/Core/tips/panle/MapTips" method="_on_enter_pressed"]
